# CFD_simulation

./: .gitignore  CMakeLists.txt  README.md
docs/: numerics.md
examples/: avante.ini  avante_geometry.geom  f1.ini  f1_demo.ini  f1_high_downforce.ini  f1_low_drag.ini  sedan.ini  sedan_geometry.geom  suv.ini  suv_geometry.geom  tucson.ini  tucson_geometry.geom
scripts/: compare_geometries.sh
src/: config.cpp  config.hpp  fvm_solver.cpp  fvm_solver.hpp  geometry.cpp  geometry.hpp  lbm_solver.cpp  lbm_solver.hpp  main.cpp  vtk_writer.cpp  vtk_writer.hpp
tests/: smoke.ini
